kubernetes/base_env/namespace-mp-demo.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mp-demo
spec:
  finalizers:
    - kubernetes
