kubernetes/base_env/service-midpoint.yaml
apiVersion: v1
kind: Service
metadata:
  name: mp-pg-demo
  namespace: mp-demo
spec:
  ports:
    - name: gui
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: mp-pg-demo
  type: ClusterIP
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
