kubernetes/base_env/ingress-midpoint.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mp-pg-demo
  namespace: mp-demo
spec:
  tls:
    - hosts:
        - mp-pg-demo.mp-demo.local
      secretName: cert-mp-pg-demo
  rules:
    - host: mp-pg-demo.mp-demo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mp-pg-demo
                port:
                  number: 8080
